// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageCard > renders with as correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
  </div>
  <!--v-if-->
</section>"
`;

exports[`PageCard > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">Body slot</div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with class correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="rounded-xl">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>Default slot
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with description correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="body" class="">
        <!--v-if-->
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description slot</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <div data-slot="footer" class="">Footer slot</div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">Header slot</div>
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color error correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color info correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color neutral correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color neutral correctly 2`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color primary correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color secondary correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color success correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color warning correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with icon correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with leading slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class="">Leading slot</div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation horizontal reverse correctly 1`] = `
"<div data-orientation="horizontal" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation vertical reverse correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color error correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color info correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color neutral correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color neutral correctly 2`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color primary correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color secondary correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color success correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight color warning correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with spotlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div data-slot="spotlight" class=""></div>
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with title correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title slot</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <!--v-if-->
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Card link" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with ui correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="font-bold">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant ghost correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant ghost highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant ghost to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant naked correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant naked highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant naked to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant soft correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant soft highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant soft to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant solid correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant solid highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant solid to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant subtle correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant subtle highlight correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant subtle to correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <!--v-if-->
  <div data-slot="container" class="">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="leading" class=""><span class="iconify i-lucide:house" aria-hidden="true" data-slot="leadingIcon"></span></div>
      <div data-slot="body" class="">
        <div data-slot="title" class="">Title</div>
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/benjamincanac" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;
